src/css/chatbot.css
.chatbot {
  width: 30rem;
  height: 50vh;
  overflow-y: visible;
}

.chatbot > .header {
  position: sticky;
  top: 0;
}

.chatbot-icon {
  width: 4rem;
  height: 4rem;
  margin: 0 0 2rem 0;
}

.conversation {
  width: 100%;
  display: flex;
  flex-direction: column;
}

.chat-name {
  color: #999;
  margin: 0 0.5rem;
  font-size: 0.8rem;
}

.message {
  width: fit-content;
  text-align: left;
  padding: 0.25rem 0.5rem;
  border-radius: 10px;
  margin: 5px;
}

.message.bot {
  background-color: #eee;
  color: black;
}
.message.user {
  background-color: rgb(118, 184, 206);
  color: white;
  margin-left: auto;
}
.options {
  display: flex;
  flex-wrap: wrap;
  margin: 2rem 0 0 0;
}
.option {
  text-align: center;
  background-color: transparent;
  border: 2px solid #666;
  cursor: pointer;
  color: var(--text-color);
  transition: 0.5s ease-out;
}

.reset-btn {
  margin: 2rem 0 0 0;
}

@media screen and (max-device-width: 480px) {
  .chatbot {
    margin: 0;
    height: 100vh;
    width: 100vw;
  }
}

